# Ox-rollup

./: .gitignore  .mocharc.json  README.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: test.yml
CHANGELOG/: CHANGELOG.md
crates/anvil-arbitrum/: .gitkeep  Cargo.toml  README.md
crates/anvil-arbitrum/src/: arbitrum.rs  cli.rs  main.rs  precompiles.rs  tx7e.rs
docs/: README.md  compatibility-matrix.csv  compatibility-matrix.md  design-brief.md  m1-compatibility-matrix.csv  m1-compatibility-matrix.md  m1-design-brief.md  m1-specification-details.md  milestone2.md  overview.md  specification-details.md
docs/Anvil-Arbitrum/: configuration.md  getting-started.md  overview.md  testing.md  usage-guide.md
docs/Architecture-and-Internals/: full-implements.md
docs/Hardhat-Arbitrum/: cli-probes-tool.md  test.md
docs/milestone2/: ARCH_STEP1.md  gas-model.md  step1-inventory.txt  step1-verify.md  step2-arbSys-implementation.md  step3-arbGasInfo-implementation.md
docs/milestone3/: cli-probes-tool.md  test.md
docs/verification/: P0_verification.md  P1_verification.md  P2_verification.md  P3_verification.md  P4_verification.md  P5_verification.md  P6_verification.md  P7_verification.md  milestone1_summary.md
node_state/: gas_config.json
probes/foundry/: foundry.toml  package-lock.json  test-deposit-flow.sh  test-precompiles.sol
probes/hardhat/: ArbProbes.sol  hardhat.config.js  hardhat.config.ts  package-lock.json  package.json  precompiles.config.json  test-arbgasinfo.js  test-arbsys-calls.js  (+1 more)
scripts/: probe-0x7e.ts
(+149 files in other folders)
