[package]
name = "anvil-arbitrum"
version = "0.1.0"
edition = "2021"
authors = ["Arbitrum Team"]
description = "Anvil fork with Arbitrum precompile support and 0x7e transaction parsing"
license = "MIT"
repository = "https://github.com/OffchainLabs/ox-rollup"
keywords = ["ethereum", "arbitrum", "anvil", "foundry", "precompiles"]
categories = ["blockchain", "cryptography"]

[dependencies]
# Rust standard library extensions
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Arbitrum-specific dependencies
rlp = "0.5"
hex = "0.4"
sha3 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
futures = "0.3"

[[bin]]
name = "anvil-arbitrum"
path = "src/main.rs"

[features]
default = ["arbitrum"]
arbitrum = []
full = ["arbitrum"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
